tests/ui/pattern_tyvars2.ina
// COMPILE_FAIL

extern mod core;
using core::prelude::*;

using Foo::*;
type Foo =
    | T1(Option[isize])
    | T2

fn main() {
    match T2 {
        T1(Some(x)) => {
            let x2: i32 = x;
            x2
        },
        T1(None) => 0,
        T2 => 0,
    };
}
